test/functions/invalid_arg_init.c
// RUN: %check -e %s
g(int i = 3); // CHECK: /error: parameter 'i' is initialised/
